--- a/css/main.css
+++ b/css/main.css
@@ -2,25 +2,21 @@
   box-sizing: border-box;
 }
 
-@font-face {
+@font-face{
   font-family: 'Oleo Script';
-  src: local('Oleo Script');
-  font-style: normal;
-  font-weight: 400;
-  src: url('http://fonts.gstatic.com/s/oleoscript/v5/_weQNDK6Uf40CiGFKBBUjogp9Q8gbYrhqGlRav_IXfk.woff2') format('woff2');
+  src: local('Oleo Script'), url('https://fonts.gstatic.com/s/oleoscript/v5/_weQNDK6Uf40CiGFKBBUjogp9Q8gbYrhqGlRav_IXfk.woff2') format('woff2');
 }
 
-@@font-face {
-  font-family: 'Poiret One';
-  font-style: normal;
+@font-face {
+  font-family: ‘Poiret One’;
+  src: local(‘Poiret One’),  url(‘https://fonts.gstatic.com/s/poiretone/v4/HrI4ZJpJ3Fh0wa5ofYMK8QzyDMXhdD8sAj6OAJTFsBI.woff2') format(‘woff2’);
   font-weight: 400;
-  src: local('Poiret One');
-  src: url('http://fonts.gstatic.com/s/poiretone/v4/HrI4ZJpJ3Fh0wa5ofYMK8QzyDMXhdD8sAj6OAJTFsBI.woff2') format('woff2');
 }
 
 .logo {
   background-image: url('../img/logo.png');
   color: white;
+  background-position: center;
 }
 
 .site-header {
@@ -52,6 +48,7 @@ li {
   height: 300px;
   width: 300px;
   background-size: cover;
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.5);
 }
 
 #middle-img {
@@ -60,6 +57,7 @@ li {
   height: 300px;
   width: 300px;
   background-size: cover;
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.5);
 }
 
 #right-img {
@@ -68,6 +66,7 @@ li {
   height: 300px;
   width: 300px;
   background-size: cover;
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.5);
 }
 
 .main-heading {
@@ -106,4 +105,10 @@ li {
   font-size: 30px;
   text-align: center;
   padding: 0 250px 0 250px;
+}
+
+footer {
+  height: 80px;
+  background-color: rgb(51, 51, 51);
+  color: white;
 }
